Correction in dark mode

--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -13,7 +13,7 @@
 .formText {
 	font-weight: bold;
 	margin-bottom: 10px;
-	color: black;
+	/*color: black;*/
 }
 
 .sendBtn {
