--- a/src/css/NavigationBar.module.css
+++ b/src/css/NavigationBar.module.css
@@ -8,6 +8,11 @@
 		color: white;
 		text-decoration: none;
 	}
+	a:hover,
+	a:focus {
+		text-decoration: none;
+		color: white;
+	}
 }
 
 .noLoggedItems {
